[package]
authors = ["Thomas Haller <thomashaller@gmx.at>"]
edition = "2021"
readme = "README.md"
name = "app"
version = "0.1.0"

#![no_std]

[dependencies]
rp-pico = "0.5.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-time = "0.12.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp2040-hal = { version="0.6.0", features=["rt"] }
rp2040-boot2 = "0.2.1"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
embedded-hal ="0.2.7"
panic-halt= "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
 